# beular

./: .dockerignore  .gitignore  Dockerfile  MANIFEST.in  README.md  config.py  docker-compose.yml  main.py  manage.py  requirements.txt  setup.cfg  setup.py
app/: __init__.py  model.py  models.py  tasks.py
app/main/: __init__.py  routes.py
app/static/js/: index.js  scan.js
app/static/styles/: 404.css  base.css
app/templates/: about.html  base.html  index.html  scan.html
app/templates/errors/: 404.html  500.html
app/templates/includes/: footer.html  head.html  nav.html  upload_doc.html
estimators/: mean_pos_sample_tfidf_vec.npy  sgd.joblib
models/: gbc.py
tests/: conftest.py  test_factory.py
