[metadata]
name = beular
author = Scott McAllister
version = 1.0.0
maintainer = csmcallister
maintainer_email = mcallistercs@gmail.com
description = Binarization of End User License Agreement Recommendations (BEULAR)
long_description = file: README.md
long_description_content_type = text/markdown

[tool:pytest]
testpaths = tests

[coverage:run]
branch = True
source =
    app
omit =
    */static/*
    */templates/*
    */cli.py

[flake8]
ignore = D203, W293, W291, E116, W292, E303
exclude = tests/fixtures/*
    .git, __pycache__, env, tests/fixtures.py
max-complexity = 10